# validata

./: .gitignore  CONTRIBUTING.md  LICENSE  MANIFEST.in  PYPI_SETUP.md  README.md  mvp_demo.py  pyproject.toml  requirements.txt  setup.py  test_validation_schema_comprehensive.py
.github/: PULL_REQUEST_TEMPLATE.md  WORKFLOWS.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: publish.yml  release.yml  test.yml
docs/: API.md  EXAMPLES.md
examples/: basic_demo.py
sample_data/: clean_dataset.csv  edge_case_all_nulls.csv  edge_case_all_same.csv  edge_case_date_edge_cases.csv  edge_case_extreme_types.csv  edge_case_single_row.csv  generate_test_data.py  large_dataset.csv  messy_dataset.csv
validata/: __init__.py  api.py  cleaner.py  profiler.py  schema_generator.py  standardizer.py  utils.py  validator.py
