[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "validata"
dynamic = ["version"]
description = "A comprehensive data validation and schema generation toolkit with LLM-friendly APIs"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "Validata Development Team", email = "micah.glenz@example.com"}
]
maintainers = [
    {name = "Validata Development Team", email = "micah.glenz@example.com"}
]
keywords = ["data validation", "schema generation", "data quality", "pandas", "data science", "llm-friendly"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.8"
dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "ydata-profiling>=4.0.0",
    "pandera>=0.17.0",
    "sqlmodel>=0.0.14",
    "scikit-learn>=1.3.0",
    "great-expectations>=0.18.0",
    "pydantic>=2.0.0",
    "psutil>=5.9.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=22.0.0",
    "flake8>=4.0.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
]
docs = [
    "sphinx>=4.0.0",
    "sphinx-rtd-theme>=1.0.0",
    "myst-parser>=0.18.0",
]

[project.urls]
Homepage = "https://github.com/Micah-Glenz/validata"
Documentation = "https://github.com/Micah-Glenz/validata#readme"
Repository = "https://github.com/Micah-Glenz/validata.git"
"Bug Reports" = "https://github.com/Micah-Glenz/validata/issues"
Changelog = "https://github.com/Micah-Glenz/validata/releases"

[tool.setuptools_scm]
write_to = "validata/_version.py"

[tool.setuptools.packages.find]
include = ["validata*"]
exclude = ["tests*"]

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--strict-markers --strict-config"
markers = [
    "slow: marks tests as slow",
    "integration: marks tests as integration tests",
]